add documented script files

--- a/Introduction-to-R.html
+++ b/Introduction-to-R.html
@@ -366,8 +366,8 @@ show up in the upper-left quadrant of RStudio.</p>
 Files: it shows what files exist in your current working directory,
 which is the class folder which has the <code>.Rproj</code> file we
 clicked on. Go ahead and click once on the <code>scripts</code> folder
-and then the <code>Introduction.Rmd</code> file, which is an R Notebook
-file. It will appear in the upper-left quadrant.</p>
+and then the <code>first-r-notebook.Rmd</code> file, which is an R
+Notebook file. It will appear in the upper-left quadrant.</p>
 <p>In the lower-left, you’ll see the <strong>Console</strong>. This will
 reflect all the R code you run, but we don’t do much with it when we’re
 working in R Notebook files.</p>
@@ -381,12 +381,13 @@ print(x)</code></pre>
 print below the chunk, allowing you to quickly see the results of your
 work. The utility of this will be apparent when we start asking
 questions of data.</p>
-<p>You create a code chunk by typing <code>cmd+option+i</code> and you
-write your <code>code</code> in between the first and last lines of the
-code chunk. All your comments, questions, thoughts, and notes are
-written outside of the code chunks. The comments outside of code chunks
-use markdown for formatting. Markdown is similar to html, but if you
-don’t know it, don’t worry about it for now.</p>
+<p>You create a code chunk by typing <code>ctrl+alt+i</code>
+(<code>cmd+option+i</code> on a Mac) and you write your
+<code>code</code> in between the first and last lines of the code chunk.
+All your comments, questions, thoughts, and notes are written outside of
+the code chunks. The comments outside of code chunks use markdown for
+formatting. Markdown is similar to html, but if you don’t know it, don’t
+worry about it for now.</p>
 </div>
 <div id="part-two-terminology" class="section level3">
 <h3>Part Two: Terminology</h3>
@@ -396,7 +397,8 @@ don’t know it, don’t worry about it for now.</p>
 to write whatever text we want, including <code>code</code> inside of
 code chunks</li>
 <li><strong>code chunk</strong>: created by typing
-<code>cmd+option+i</code>, type your code inside code chunks.</li>
+<code>ctrl+alt+i</code> (<code>cmd+option+i</code> on a Mac), type your
+code inside code chunks.</li>
 <li><strong>environment</strong>: this is basically your workspace for
 every R session. It’s empty until you start storing information in
 variables.</li>
@@ -509,7 +511,7 @@ information from one function to the next. It is a part of the <a href="https://
 <strong>package</strong>, which is the primary set of tools we use for
 data analysis in R. You will use the pipe a lot, and it looks like this:
 <code>%&gt;%</code>. A shortcut for typing it is
-<code>cmd+shift+m</code>(or <code>ctrl+shift+m</code>).</p></li>
+<code>ctrl+shift+m</code> (<code>cmd+option+m</code> on a Mac).</p></li>
 </ul>
 </div>
 <div id="part-three-the-key-to-understanding-programming" class="section level3">
@@ -528,16 +530,9 @@ in a variable.</p>
 </div>
 <div id="part-four-time-to-write-some-code" class="section level3">
 <h3>Part Four: Time to write some code</h3>
-<p>Using the Files pane in the lower-right quadrant, click once on the
-<code>scripts</code> folder and then on the filename
-<code>R-Basics.Rmd</code>. It should open in the upper-left
-quadrant.</p>
-<p>Some of the code is already written out. You can run it by clicking
-the green “play” button in the upper-right corner of a code chunk. You
-can also run individual lines of code in a code chunk by putting your
-cursor on that line and typing <code>cmd + return</code> (or
-<code>ctrl + enter</code> on a PC).</p>
-<p>You will also have the chance to type your own code.</p>
+<p>To create Notebook files, use File &gt; New File &gt; R Notebook; or
+the first button in the button bar above (which looks like a white box
+with a green plus sign on it). Then you’re ready to code!</p>
 </div>
 
 
